@@ -59,8 +59,6 @@ struct zone_mem {
 	size_t data;
 	/* unused space (in db.region) due to alignment */
 	size_t data_unused;
-	/* radix tree space used */
-	size_t tree;
 	/* udb data allocated */
 	size_t udb_data;
 	/* udb overhead (chunk2**x - data) */
@@ -76,8 +74,6 @@ struct tot_mem {
 	size_t data;
 	/* unused space (in db.region) due to alignment */
 	size_t data_unused;
-	/* radix tree space used */
-	size_t tree;
 	/* udb data allocated */
 	size_t udb_data;
 	/* udb overhead (chunk2**x - data) */
@@ -103,38 +99,11 @@ struct tot_mem {
 	size_t disk;
 };
 
-/* calc mem use of a radix tree node and its descendants */
-static size_t
-tree_node_size(struct radnode* n)
-{
-	size_t res = sizeof(*n);
-	if(!n) return 0;
-	if(n->array) {
-		size_t i;
-		res += sizeof(struct radsel)*((size_t)n->capacity);
-		for(i=0; i<n->len; i++) {
-			res += n->array[i].len;
-			if(n->array[i].node)
-				res += tree_node_size(n->array[i].node);
-		}
-	}
-	return res;
-}
-
-/* calc mem use of radix tree (not its elements) */
-static size_t
-tree_size(struct radtree* t)
-{
-	if(!t) return 0;
-	return sizeof(*t) + tree_node_size(t->root);
-}
-
 static void
 account_zone(struct namedb* db, struct zone_mem* zmem)
 {
 	zmem->data = region_get_mem(db->region);
 	zmem->data_unused = region_get_mem_unused(db->region);
-	zmem->tree = tree_size(db->domains->nametree);
 	zmem->udb_data = (size_t)db->udb->alloc->disk->stat_data;
 	zmem->udb_overhead = (size_t)(db->udb->alloc->disk->stat_alloc -
 		db->udb->alloc->disk->stat_data);
@@ -162,7 +131,6 @@ print_zone_mem(struct zone_mem* z)
 {
 	pretty_mem(z->data, "zone data");
 	pretty_mem(z->data_unused, "zone unused space (due to alignment)");
-	pretty_mem(z->tree, "zone tree");
 	pretty_mem(z->udb_data, "data in nsd.db");
 	pretty_mem(z->udb_overhead, "overhead in nsd.db");
 }
@@ -182,8 +150,8 @@ account_total(nsd_options_t* opt, struct tot_mem* t)
 	t->rrl *= opt->server_count;
 #endif
 
-	t->ram = t->data + t->data_unused + t->tree + 
-		t->opt_data + t->opt_unused + t->compresstable;
+	t->ram = t->data + t->data_unused + t->opt_data + t->opt_unused +
+		t->compresstable;
 #ifdef RATELIMIT
 	t->ram += t->rrl;
 #endif
@@ -196,7 +164,6 @@ print_tot_mem(struct tot_mem* t)
 	printf("\ntotal\n");
 	pretty_mem(t->data, "data");
 	pretty_mem(t->data_unused, "unused space (due to alignment)");
-	pretty_mem(t->tree, "tree");
 	pretty_mem(t->opt_data, "options");
 	pretty_mem(t->opt_unused, "options unused space (due to alignment)");
 	pretty_mem(t->compresstable, "name table (depends on servercount)");
@@ -216,7 +183,6 @@ add_mem(struct tot_mem* t, struct zone_mem* z)
 {
 	t->data += z->data;
 	t->data_unused += z->data_unused;
-	t->tree += z->tree;
 	t->udb_data += z->udb_data;
 	t->udb_overhead += z->udb_overhead;
 	t->domaincount += z->domaincount;
